maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:15: error: type mismatch;
 found   : Unit
 required: Int
    else if( estFaceMur()){droite(); return vir -1}
         ^